# evaboost

./: CMakeLists.txt  README.md  RESEARCH.md  ROADMAP.md
include/: classification_tree.h  config.h  data_item.h  dataset.h  differential_evolution.h  evaluation.h  evolution_strategies.h  node.h  optimization.h
include/evaboost/: evaboost.hpp  version.h
src/: classification_tree.cpp  config.cpp  data_item.cpp  dataset.cpp  differential_evolution.cpp  evaluation.cpp  evolution_strategies.cpp  node.cpp
tests/: README.md
tools/: CMakeLists.txt  train_and_test.cpp
